fix: 🐛 fix z-index in Input

--- a/components/maptool/styles.less
+++ b/components/maptool/styles.less
@@ -4,13 +4,14 @@
   pointer-events: auto;
   cursor: pointer;
   height: 36px;
-  width: 64px;
+  width: auto;
   color: #E0E3E8;
   background-color: #262E44;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   font-size: 12px;
+  padding: 0 10px;
   .mc_map_tool {
     width: 14px;
     height: 14px;
